; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/bta/hf_ag/extr_bta_ag_cmd.c_bta_ag_at_err_cback.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/bta/hf_ag/extr_bta_ag_cmd.c_bta_ag_at_err_cback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_12__ = type { i32 (i32, i32*)* }
%struct.TYPE_11__ = type { i32, i32 }
%struct.TYPE_10__ = type { i64*, i64, %struct.TYPE_9__ }
%struct.TYPE_9__ = type { i32, i32 }

@.str = private unnamed_addr constant [29 x i8] c"Empty AT cmd string received\00", align 1
@BTA_AG_FEAT_UNAT = common dso_local global i32 0, align 4
@BTA_AG_AT_MAX_LEN = common dso_local global i64 0, align 8
@bta_ag_cb = common dso_local global %struct.TYPE_12__ zeroinitializer, align 8
@BTA_AG_AT_UNAT_EVT = common dso_local global i32 0, align 4
@BTA_AG_ERR_OP_NOT_SUPPORTED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @bta_ag_at_err_cback(%struct.TYPE_11__* %0, i64 %1, i8* %2) #0 {
  %4 = alloca %struct.TYPE_11__*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.TYPE_10__, align 8
  store %struct.TYPE_11__* %0, %struct.TYPE_11__** %4, align 8
  store i64 %1, i64* %5, align 8
  store i8* %2, i8** %6, align 8
  %8 = load i64, i64* %5, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %18

10:                                               ; preds = %3
  %11 = load i8*, i8** %6, align 8
  %12 = call i32 @strlen(i8* %11)
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %18, label %14

14:                                               ; preds = %10
  %15 = call i32 @APPL_TRACE_DEBUG(i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str, i64 0, i64 0))
  %16 = load %struct.TYPE_11__*, %struct.TYPE_11__** %4, align 8
  %17 = call i32 @bta_ag_send_ok(%struct.TYPE_11__* %16)
  br label %56

18:                                               ; preds = %10, %3
  %19 = load i64, i64* %5, align 8
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %52

21:                                               ; preds = %18
  %22 = load %struct.TYPE_11__*, %struct.TYPE_11__** %4, align 8
  %23 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = load i32, i32* @BTA_AG_FEAT_UNAT, align 4
  %26 = and i32 %24, %25
  %27 = icmp ne i32 %26, 0
  br i1 %27, label %28, label %52

28:                                               ; preds = %21
  %29 = load %struct.TYPE_11__*, %struct.TYPE_11__** %4, align 8
  %30 = call i32 @bta_ag_scb_to_idx(%struct.TYPE_11__* %29)
  %31 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %7, i32 0, i32 2
  %32 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %31, i32 0, i32 1
  store i32 %30, i32* %32, align 4
  %33 = load %struct.TYPE_11__*, %struct.TYPE_11__** %4, align 8
  %34 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %33, i32 0, i32 1
  %35 = load i32, i32* %34, align 4
  %36 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %7, i32 0, i32 2
  %37 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %36, i32 0, i32 0
  store i32 %35, i32* %37, align 8
  %38 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %7, i32 0, i32 1
  store i64 0, i64* %38, align 8
  %39 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %7, i32 0, i32 0
  %40 = load i64*, i64** %39, align 8
  %41 = load i8*, i8** %6, align 8
  %42 = load i64, i64* @BTA_AG_AT_MAX_LEN, align 8
  %43 = call i32 @BCM_STRNCPY_S(i64* %40, i32 8, i8* %41, i64 %42)
  %44 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %7, i32 0, i32 0
  %45 = load i64*, i64** %44, align 8
  %46 = load i64, i64* @BTA_AG_AT_MAX_LEN, align 8
  %47 = getelementptr inbounds i64, i64* %45, i64 %46
  store i64 0, i64* %47, align 8
  %48 = load i32 (i32, i32*)*, i32 (i32, i32*)** getelementptr inbounds (%struct.TYPE_12__, %struct.TYPE_12__* @bta_ag_cb, i32 0, i32 0), align 8
  %49 = load i32, i32* @BTA_AG_AT_UNAT_EVT, align 4
  %50 = bitcast %struct.TYPE_10__* %7 to i32*
  %51 = call i32 %48(i32 %49, i32* %50)
  br label %56

52:                                               ; preds = %21, %18
  %53 = load %struct.TYPE_11__*, %struct.TYPE_11__** %4, align 8
  %54 = load i32, i32* @BTA_AG_ERR_OP_NOT_SUPPORTED, align 4
  %55 = call i32 @bta_ag_send_error(%struct.TYPE_11__* %53, i32 %54)
  br label %56

56:                                               ; preds = %14, %52, %28
  ret void
}

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @APPL_TRACE_DEBUG(i8*) #1

declare dso_local i32 @bta_ag_send_ok(%struct.TYPE_11__*) #1

declare dso_local i32 @bta_ag_scb_to_idx(%struct.TYPE_11__*) #1

declare dso_local i32 @BCM_STRNCPY_S(i64*, i32, i8*, i64) #1

declare dso_local i32 @bta_ag_send_error(%struct.TYPE_11__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
